# suwiz

./: Doxyfile  Makefile.am  Makefile.in  README.md  configure  configure.ac
.github/workflows/: doc.yml  test.yml
autom4te.cache/: output.0  output.2  requests  traces.0  traces.2
docs/: README_8md.html  common_8h.html  common_8h_source.html  dir_189c3814ad676f1592145e2719f47fd5.html  dir_f53dcf709fee5500c4688b7e0d2cd6ec.html  files.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  index.html  md_README.html  pages.html  suwiz_8h.html  suwiz_8h_source.html
docs/search/: all_2.js  defines_0.js  enums_0.js  enumvalues_0.js  files_2.js  functions_0.js  pages_0.js  searchdata.js
libsuwiz/include/: common.h  suwiz.h
libsuwiz/src/: constraints.c  constraints.h  convert.c  convert.h  solve.c  solve.h  solve_recursive.c  suwiz.c
libsuwiz/test/: driver.c  test_constraints.c  test_constraints.h  test_convert.c  test_convert.h  test_solve.c  test_solve.h  test_suwiz.c  test_suwiz.h
suwiz-cli/src/: argp.c  argp.h  main.c
