AC_PREREQ([2.69])
AC_INIT([suwiz], [1.0], [hasnain.mohsan@gmail.com])
AC_CONFIG_AUX_DIR([build-aux])
AM_INIT_AUTOMAKE([subdir-objects -Wall -Werror])
AC_CONFIG_SRCDIR([libsuwiz/include/suwiz.h])
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([Makefile])

AC_PROG_CC
AM_PROG_AR
AC_PROG_RANLIB

AC_OUTPUT